Adding code templates for home page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="BasePoint Framework oferece ferramentas para criar aplicações robustas e modernas, permitindo que você foque no seu negócio."/>
+    <title>Eficiência Na Criação De Aplicações - basepointweb.io</title>
   </head>
   <body>
     <div id="root"></div>
